# offline-translator

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  build.sh  generate.py  generate_tts_index.py  generate_v2.py  server.js  sign-apk.sh  wrangler.jsonc
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/bergamot/: build.gradle.kts
app/bergamot/src/main/cpp/: CMakeLists.txt  bergamot.cpp
app/bergamot/src/main/java/dev/davidv/bergamot/: NativeLib.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dictionary_index.json  index.json  language_index.json
app/src/main/bindings/: Cargo.toml
app/src/main/bindings/src/: lib.rs  logging.rs  mucab.rs  speech.rs  transliterate.rs
app/src/main/java/dev/davidv/translator/: AidlTranslationService.kt  AppSettings.kt  BatchTextTranslator.kt  DictionaryIndex.kt  DictionaryLanguage.kt  DownloadEvent.kt  DownloadService.kt  FileEvent.kt  FilePathManager.kt  ImagePainting.kt  ImageProcessor.kt  Language.kt  LanguageCatalog.kt  LanguageCatalogV2.kt  LanguageDetector.kt  LanguageManager.kt  LanguageMetadataManager.kt  LanguageStateManager.kt  MainActivity.kt  OCRService.kt  OverlayTextTranslationHelper.kt  PackResolver.kt  PcmAudio.kt  PcmAudioPlayer.kt  ProcessTextActivity.kt  ReadingOrder.kt  SettingsManager.kt  SpeechBinding.kt  StyledTextPipeline.kt  TranslationCoordinator.kt  TranslationService.kt  TranslatorApplication.kt  TranslatorMessage.kt  TransliterateBinding.kt  TransliterationService.kt
app/src/main/java/dev/davidv/translator/accessibilityOverlay/: OverlayInput.kt  OverlayUI.kt  TranslatorAccessibilityService.kt
app/src/main/java/dev/davidv/translator/assistantOverlay/: AssistStructureLogger.kt  AssistStructureParser.kt  BorderWaveView.kt  CapturedTextBlock.kt  OverlayRenderer.kt  TranslatorRecognitionService.kt  TranslatorVoiceInteractionService.kt  TranslatorVoiceInteractionSession.kt  TranslatorVoiceInteractionSessionService.kt
app/src/main/java/dev/davidv/translator/overlayChrome/: OverlayChromeFactory.kt  OverlayMenuManager.kt
app/src/main/java/dev/davidv/translator/ui/: TranslatorViewModel.kt
app/src/main/java/dev/davidv/translator/ui/components/: DetectedLanguageSection.kt  DetectedLanguageToast.kt  DictionaryBottomSheet.kt  ImageCaptureComponent.kt  LanguageDownloadButton.kt  LanguageSelectionRow.kt  LanguageSelector.kt  TranslationField.kt
app/src/main/java/dev/davidv/translator/ui/screens/: LanguageAssetManagerScreen.kt  MainScreen.kt  NoLanguagesScreen.kt  SettingsScreen.kt  TabbedLanguageManagerScreen.kt  TranslatorApp.kt
app/src/main/res/drawable/: activity_zone.xml  ic_translate_button.xml  stop.xml  text_rotate_vertical.xml  text_rotation_none.xml  volume_up.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  recognition_service.xml  voice_interaction_service.xml
app/src/test/java/dev/davidv/translator/: StyledTextPipelineTest.kt
fastlane/metadata/android/en-US/: full_description.txt
fastlane/metadata/android/en-US/changelogs/: 10.txt  11.txt  122.txt  9.txt
functions/proxy/: [[path]].js
gradle/: libs.versions.toml
website/: index.html
website/app/: app.js  index.html  manifest.json  models.js  storage.js  style.css  sw.js  translator-worker.js  translator.js
